<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dailyTracking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="storeName">Store Name:</string>
    <string name="category">Category</string>
    <string name="billAmount">Bill Amount</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string-array name="category_arrays">
        <item>Rent</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Gas</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>

    <string name="done">Done</string>
    <string name="enterBill">Enter Bill</string>
    <string name="title_activity_enter_bills">EnterBillsActivity</string>
    <string name="date">Date of the Bill:</string>
    <string name="title_activity_location_logic">LocationLogic</string>
    <string name="title_activity_location_history">LocationHistory</string>
    <string name="title_activity_track_history">TrackHistoryActivity</string>
    <string name="title_activity_transaction_history">Transaction History</string>
    <string name="confirm_clear_history">Clear History</string>
    <string name="confirm_clear_trans_history">Are you sure you want to delete all of you spending history (cannot be undone)?</string>
    <string name="title_activity_loc_history_map">Location History</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_baller">Baller</string>
    <string name="title_activity_trans_history_map">TransHistoryMapActivity</string>

</resources>