<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterBillsActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/storeNametableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/StoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storeName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/storeNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" android:inputType="none">

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/categoryTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp" >

            <TextView
                android:id="@+id/catogoryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/categorySpin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/category_arrays" />
        </TableRow>

        <TableRow
            android:id="@+id/billAmountTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/billAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/billAmount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/billAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/saveValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1"
        android:layout_marginTop="36dp"
        android:onClick="onSubmit"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saveValue"
        android:layout_alignBottom="@+id/saveValue"
        android:layout_toRightOf="@+id/saveValue"
        android:text="@string/cancel" />

</RelativeLayout>